--- a/projects/pokemon/style.css
+++ b/projects/pokemon/style.css
@@ -13,6 +13,10 @@ body{
     justify-content: center;
     align-items: center;
     background-image: url('background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 #display{
@@ -24,26 +28,65 @@ button{
     padding: 3px 3px;
     border-radius: 10px;
     font-size: 1.5em;
+    font-family: monospace;
     background-color: hsla(118, 98%, 50%, 0.646);
 }
 
-button:hover{
-    cursor: pointer;
-    background-color: hsla(118, 98%, 50%, 0.916);
-}
+.btn-grad {background-image: linear-gradient(to right, #DC2424 0%, #4A569D  51%, #DC2424  100%)}
+
+.btn-grad {
+   margin: 10px;
+   padding: 10px 45px;
+   text-align: center;
+   text-transform: uppercase;
+   transition: 0.5s;
+   background-size: 200% auto;
+   color: white;            
+   box-shadow: 0 0 20px #eee;
+   border-radius: 10px;
+   display: block;
+ }
+
+ .btn-grad:hover {
+   background-position: right center; /* change the direction of the change here */
+   color: #fff;
+   text-decoration: none;
+   cursor: pointer;
+ }
+
 
 input[type='text'] { 
-    font-family: sans-serif; 
+    font-family: monospace; 
     text-align: center;
+}
+
+input{
+    border-radius: 15px;
+    height: 2.5em;
+    border-color: transparent;
+    border-style: hidden;
+    box-shadow: 5px 5px 5px hsl(0, 0%, 0%);
+    background-color: hsla(0, 0%, 100%, 0.486);
+}
+
+
+
+input:focus{
+    outline: none;
+    box-shadow: 5px 5px 5px rgb(217, 63, 63), -5px -5px 5px hsla(200, 100%, 63%, 0.704);
 }
 
 form{
     display: flex;
     flex-direction: column;
+    /* margin: 20px; */
+    top: -10px;
+    justify-content: space-around;
+    height: 130px;
 }
 
 #display{
-    /* border-radius: 50%; */
+    /* margin: 20px; */
     width: 200px;
     height: 200px;
 }
